Fix transparent scrollbars

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@
   background: transparent;
 }
 
+#blackbox-main-window scrollbar {
+  background: @window_bg_color;
+}
+
 window:not(.about) headerbar,
 .custom-headerbar {
   background-color: @window_bg_color;
